--- a/app/src/main/res/drawable/bg_filter_button_normal.xml
+++ b/app/src/main/res/drawable/bg_filter_button_normal.xml
@@ -3,7 +3,8 @@
     android:shape="rectangle">
 
     <!-- 배경색: 연한 회색 -->
-    <solid android:color="#F0F0F0" />
+    <solid android:color="@color/white" />
+    <stroke android:width="0.5dp" android:color="@color/primary_light" />
 
     <!-- 둥근 모서리 -->
     <corners android:radius="20dp" />
