--- a/app/src/main/res/drawable/bg_search_bar_orange_border.xml
+++ b/app/src/main/res/drawable/bg_search_bar_orange_border.xml
@@ -1,11 +1,7 @@
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!-- 하단 밑줄 레이어 -->
-    <item android:gravity="bottom">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/primary" /> <!-- 주황색 밑줄 -->
-            <size android:height="1dp" /> <!-- 밑줄 두께 -->
-        </shape>
-    </item>
-
-</layer-list>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/white" />
+    <corners android:radius="20dp" />
+    <stroke android:color="@color/primary" android:width="1dp"/>
+</shape>
