--- a/app/src/main/res/layout/activity_category_selection.xml
+++ b/app/src/main/res/layout/activity_category_selection.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_modal_bottom"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:orientation="vertical"
     android:paddingStart="20dp"
     android:paddingTop="20dp"
@@ -39,6 +41,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:fillViewport="true"
         android:paddingBottom="16dp">
 
@@ -48,10 +52,15 @@
             android:orientation="vertical">
 
             <!-- 분류별 -->
-            <androidx.cardview.widget.CardView
-                style="@style/CategorySectionCard">
+            <androidx.cardview.widget.CardView style="@style/CategorySectionCard">
+
                 <LinearLayout style="@style/CategorySectionLayout">
-                    <TextView style="@style/CategorySectionTitle" android:text="분류별" />
+
+                    <TextView
+                        style="@style/CategorySectionTitle"
+                        android:text="분류별"
+                        android:includeFontPadding="false"/>
+
                     <com.google.android.material.chip.ChipGroup
                         android:id="@+id/chip_group_type"
                         style="@style/CategoryChipGroup" />
@@ -59,10 +68,15 @@
             </androidx.cardview.widget.CardView>
 
             <!-- 종류별 -->
-            <androidx.cardview.widget.CardView
-                style="@style/CategorySectionCard">
+            <androidx.cardview.widget.CardView style="@style/CategorySectionCard">
+
                 <LinearLayout style="@style/CategorySectionLayout">
-                    <TextView style="@style/CategorySectionTitle" android:text="종류별" />
+
+                    <TextView
+                        style="@style/CategorySectionTitle"
+                        android:text="종류별"
+                        android:includeFontPadding="false"/>
+
                     <com.google.android.material.chip.ChipGroup
                         android:id="@+id/chip_group_dish"
                         style="@style/CategoryChipGroup" />
@@ -70,10 +84,15 @@
             </androidx.cardview.widget.CardView>
 
             <!-- 상황별/테마 -->
-            <androidx.cardview.widget.CardView
-                style="@style/CategorySectionCard">
+            <androidx.cardview.widget.CardView style="@style/CategorySectionCard">
+
                 <LinearLayout style="@style/CategorySectionLayout">
-                    <TextView style="@style/CategorySectionTitle" android:text="상황별/테마" />
+
+                    <TextView
+                        style="@style/CategorySectionTitle"
+                        android:text="상황별/테마"
+                        android:includeFontPadding="false"/>
+
                     <com.google.android.material.chip.ChipGroup
                         android:id="@+id/chip_group_theme"
                         style="@style/CategoryChipGroup" />
