--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="title">
-        <item name="android:textSize">28sp</item>
+        <item name="android:textSize">26sp</item>
         <item name="android:letterSpacing">-0.02</item>
-        <item name="android:textStyle">bold</item>
     </style>
     <style name="title1">
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">22sp</item>
         <item name="android:letterSpacing">-0.02</item>
-        <item name="android:textStyle">bold</item>
     </style>
     <style name="title1_1">
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">13sp</item>
         <item name="android:letterSpacing">-0.02</item>
-        <item name="android:textStyle">bold</item>
     </style>
     <style name="category">
         <item name="android:textSize">13sp</item>
@@ -70,7 +67,6 @@
     <style name="UserPageMenuText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">#424242</item>
         <item name="android:textSize">12sp</item>
     </style>
 
@@ -118,21 +114,6 @@
         <item name="closeIconTint">@color/darker_gray</item>
         <item name="chipCornerRadius">20dp</item>
         <item name="android:checkable">false</item>
-    </style>
-
-    <!-- 필터/정렬 버튼 스타일 -->
-    <style name="SearchFilterButton" parent="Widget.AppCompat.TextView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">36dp</item> <!-- 세로 크기 고정 -->
-        <item name="android:minWidth">70dp</item> <!-- 최소 너비 지정 -->
-        <item name="android:gravity">center</item> <!-- 텍스트 중앙 정렬 -->
-        <item name="android:paddingHorizontal">12dp</item> <!-- 좌우 패딩 -->
-        <item name="android:background">@drawable/bg_filter_button_normal</item>
-        <item name="android:textColor">@color/text_sub</item>
-        <item name="android:includeFontPadding">false</item>
-        <item name="android:fontFamily">@font/notosans_medium</item>
-        <item name="android:textSize">13sp</item>
-        <item name="android:drawablePadding">4dp</item>
     </style>
 
     <style name="FilterTitle" parent="Widget.AppCompat.TextView">
@@ -211,7 +192,7 @@
         <item name="android:paddingTop">6dp</item>
         <item name="android:paddingEnd">12dp</item>
         <item name="android:paddingBottom">6dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/primary_variant</item>
         <item name="android:textSize">16sp</item>
     </style>
 
