--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="16dp"
-    android:gravity="center_vertical">
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="8dp">
 
     <ImageView
         android:id="@+id/iv_current_title_check"
@@ -17,14 +19,23 @@
         android:id="@+id/tv_title_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_marginStart="16dp"
+        android:layout_weight="1"
+        android:fontFamily="@font/notosans_medium"
+        android:includeFontPadding="false"
         android:text="칭호 이름"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_select_title"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:text="설정하기"/>
+        android:layout_height="50dp"
+        android:backgroundTint="@color/primary"
+        android:fontFamily="@font/notosans_bold"
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:text="설정하기"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        app:cornerRadius="16dp" />
 </LinearLayout>
