--- a/app/src/main/res/drawable/bg_w_cloud_b.xml
+++ b/app/src/main/res/drawable/bg_w_cloud_b.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#44408E"
-        android:endColor="#3E4474"
+        android:startColor="#C5CBD5"
+        android:endColor="#595959"
         android:angle="270" />
-    <corners android:radius="28dp" />
 </shape>
