--- a/app/src/main/res/drawable/bg_w_cloud_c.xml
+++ b/app/src/main/res/drawable/bg_w_cloud_c.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#44408E"
-        android:endColor="#3E4474"
+        android:startColor="#BBBDC1"
+        android:endColor="#8A8A8A"
         android:angle="270" />
     <corners android:radius="28dp" />
 </shape>
