--- a/app/src/main/res/layout/weather.xml
+++ b/app/src/main/res/layout/weather.xml
@@ -5,7 +5,7 @@
     android:id="@+id/weatherBackgroundContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_w_cloud_b"
+    android:background="@drawable/bg_w_day_b"
     tools:context=".weather.WeatherMainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -49,7 +49,7 @@
     <ScrollView
         android:id="@+id/weatherContentScroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:fillViewport="true"
         app:layout_constraintTop_toBottomOf="@id/top_bar_layout"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,6 @@
                 android:id="@+id/weatherOverlay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -201,7 +200,7 @@
                     android:layout_gravity="center"
                     android:contentDescription="날씨 아이콘"
                     android:scaleType="centerInside"
-                    android:src="@drawable/rain"
+                    android:src="@drawable/cloudsun"
                     android:tintMode="src_atop"/>
             </LinearLayout>
 
@@ -211,7 +210,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="40dp"
                 android:id="@+id/recommendationContainer"
-                android:background="@drawable/bg_w_cloud_c"
+                android:background="@drawable/bg_w_day_c"
                 android:orientation="vertical"
                 android:padding="20dp">
 
